--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-i18next": "^13.5.0",
@@ -28,6 +32,7 @@
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.3.2"
   },
   "scripts": {
@@ -53,5 +58,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.7",
+    "@types/react-csv": "^1.1.9"
   }
 }
