--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
@@ -29,6 +31,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
@@ -62,6 +65,7 @@
   },
   "devDependencies": {
     "@types/react-copy-to-clipboard": "^5.0.7",
-    "@types/react-csv": "^1.1.9"
+    "@types/react-csv": "^1.1.9",
+    "@types/react-table": "^7.7.18"
   }
 }
