--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/bootstrap": "^5.2.10",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.8",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
@@ -21,12 +23,15 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-i18next": "^13.5.0",
+    "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
