--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
