--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-table": "^7.8.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
