--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/jest": "^27.5.2",
     "@types/leaflet": "^1.9.8",
+    "@types/leaflet-rotatedmarker": "^0.2.5",
     "@types/leaflet-routing-machine": "^3.2.8",
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.38",
@@ -24,6 +25,7 @@
     "jspdf-autotable": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-rotatedmarker": "^0.2.0",
     "leaflet-routing-machine": "^3.2.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
